--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 </head>
 <body>
 
+    <div ng-app="app">
+      <div ng-controller='MainController'>
+        {{name}}
+          {{contact.phone}}
+          {{contact.email}}
+      </div>
+    </div>
+
     <script src="js/angular.js"></script>
     <script src="js/app/app.js"></script>
     <script src="js/app/controllers/MainController.js"></script>
